noinst_HEADERS = \
	authenticator/abstract_authenticator.hpp \
	authenticator/authentication_result_container.hpp \
	authenticator/authentication_result.hpp \
	config/configuration_object.hpp \
	config/configuration_initializer.hpp \
	filter/abstract_filter.hpp \
	filter/filter_group.hpp \
	filter/filter_reason.hpp \
	filter/abstract_filter_reason_factory.hpp \
	io/session.hpp \
	io/plain_connection.hpp \
	io/server.hpp \
	io/connection.hpp \
	io/protocol.hpp \
	io/ssl_connection.hpp \
	io/abstract_data.hpp \
	logging/log_initializer.hpp \
	logging/log.hpp \
	logging/abstract_logger.hpp \
	parser/abstract_local_parser.hpp \
	parser/abstract_stateful_parser.hpp \
	parser/abstract_parser.hpp \
	parser/abstract_remote_parser.hpp \
	parser/abstract_session_manager.hpp \
	persistency/mysqldbmanager.hpp \
	persistency/pooled_dbmanager.hpp \
	persistency/dbconnection.hpp \
	persistency/dbmanager.hpp \
	protocols/http/btk_filter.hpp \
	protocols/http/btk_filter_group.hpp \
	protocols/http/content_filter_group.hpp \
	protocols/http/filetype_filter_group.hpp \
	protocols/http/clamd_av_filter.hpp \
	protocols/http/data.hpp \
	protocols/http/file_ext_filter.hpp \
	protocols/http/request.hpp \
	protocols/http/response.hpp \
	protocols/http/header.hpp \
	protocols/http/ldap_basic_authentication.hpp \
	protocols/http/https_authenticator.hpp \
	protocols/http/http_session_manager.hpp \
	protocols/http/http_filter_result_generator.hpp \
	protocols/http/http_filter_reason_factory.hpp \
	protocols/http/http_filter_logger.hpp \
	protocols/http/domain_filter.hpp \
	protocols/http/request_parser.hpp \
	protocols/http/response_parser.hpp \
	protocols/http/domain_re_filter.hpp \
	protocols/http/html_content_filter.hpp \
	protocols/http/content_mime_filter.hpp \
	protocols/http/http_parser_constants.hpp \
	protocols/http/url_re_filter.hpp \
	protocols/http/auth_util/asn1-common.h \
	protocols/http/auth_util/asn1_err.h \
	protocols/http/auth_util/spnegokrb5.h \
	protocols/http/auth_util/parse_units.h \
	protocols/http/auth_util/spnegokrb5_locl.h \
	protocols/http/auth_util/der.h \
	protocols/http/auth_util/spnego_asn1.h \
	protocols/http/auth_util/der_locl.h \
	protocols/http/http_util.hpp \
	protocols/http/http_filter_logger.hpp \
	protocols/http/parser_util.hpp \
	protocols/http/url_filter.hpp \
	protocols/http/ad_kerb_negotiator.hpp \
	protocols/http/http_filter_result_generator.hpp \
	service/pcre_service.hpp \
	service/authentication_service.hpp \
	service/filter_service.hpp \
	service/service_chain_element.hpp \
	service/session_service.hpp \
	service/service_container.hpp \
	service/services.hpp \
	service/magic_num_service.hpp \
	service/reply_service.hpp \
	service/parser_service.hpp \
	service/util_service.hpp \
	service/tracker_service.hpp \
	util/zlib_util.hpp \
	util/base64.hpp \
	util/pcre_analyzer.hpp \
	util/pcre_parser.hpp \
	util/passwd_hash.hpp
